New update
Improvement swagger documentation.
